[gd_scene load_steps=14 format=3 uid="uid://j70abl1nme6y"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_7ln54"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ProblemSelection/problem_selector.gd" id="2_7m7ny"]
[ext_resource type="PackedScene" uid="uid://cqfassynt86vn" path="res://Scenes and Scripts/UI/Equation/mini_equation.tscn" id="2_v0r42"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="2_yg01j"]
[ext_resource type="LabelSettings" uid="uid://mi5j08pnv0ay" path="res://Resources/Themes/uppercase_and_numbers.tres" id="3_08rbt"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="4_c7up8"]
[ext_resource type="Texture2D" uid="uid://cb6lapmtgwimd" path="res://Textures/UI/MiniDiagram/arrow_right.png" id="6_prjng"]
[ext_resource type="Texture2D" uid="uid://cms1u4elh5bo3" path="res://Textures/Buttons/icons/delete.png" id="8_moko8"]
[ext_resource type="Texture2D" uid="uid://drw6s2h3fn501" path="res://Textures/Buttons/Tabs/arrow_up.png" id="9_38yb2"]
[ext_resource type="Texture2D" uid="uid://em240kmik0fw" path="res://Textures/Buttons/icons/modify.png" id="10_8itxw"]
[ext_resource type="Texture2D" uid="uid://dwh7e30xi8v07" path="res://Textures/Buttons/Tabs/arrow_down.png" id="10_r0lbv"]
[ext_resource type="Texture2D" uid="uid://co7w81osg53kf" path="res://Textures/UI/Information/valid.png" id="12_moc2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qxe7s"]

[node name="ProblemSelector" type="PanelContainer"]
material = ExtResource("1_7ln54")
offset_right = 12.0
offset_bottom = 12.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_qxe7s")
script = ExtResource("2_7m7ny")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Index" type="Label" parent="HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(16, 2.08165e-12)
layout_mode = 2
text = "1"
label_settings = ExtResource("3_08rbt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2

[node name="Equation" parent="HBoxContainer/PanelContainer/HBoxContainer" instance=ExtResource("2_v0r42")]
custom_minimum_size = Vector2(184.001, 21)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="Play" parent="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer" instance=ExtResource("2_yg01j")]
material = null
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(22, 22)
action_mode = 1
icon = ExtResource("6_prjng")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/Play" instance=ExtResource("4_c7up8")]
tooltip = "Play"

[node name="Delete" parent="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer" instance=ExtResource("2_yg01j")]
material = null
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(22, 22)
action_mode = 1
icon = ExtResource("8_moko8")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/Delete" instance=ExtResource("4_c7up8")]
tooltip = "Delete"

[node name="Modify" parent="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer" instance=ExtResource("2_yg01j")]
material = null
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(22, 22)
action_mode = 1
icon = ExtResource("10_8itxw")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/Modify" instance=ExtResource("4_c7up8")]
tooltip = "Modify"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = -6

[node name="Up" parent="HBoxContainer/PanelContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_yg01j")]
material = null
layout_mode = 2
minimum_size = Vector2(19, 15)
icon = ExtResource("9_38yb2")
icon_use_parent_material = true

[node name="Down" parent="HBoxContainer/PanelContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_yg01j")]
material = null
layout_mode = 2
minimum_size = Vector2(19, 15)
icon = ExtResource("10_r0lbv")
icon_use_parent_material = true

[node name="Completed" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("12_moc2h")
expand_mode = 5
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/Modify" to="." method="_on_modify_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/Down" to="." method="_on_down_pressed"]
